ajuste de vacinas, inserção de img ze gotinha

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
     <div class="container mx-auto p-4 md:p-8">
 
 
-        <header class="text-center my-8 md:my-12 card">
-            <h1 class="text-4xl md:text-5xl font-bold font text-[#004AAD]"
-                style="text-shadow: 2px 2px 2px rgba(0,0,0, 0.3);">
-                Guia Rápido de Vacinação no Brasil</h1>
+        <header class="flex items-center justify-center gap-4 my-8 md:my-12">
+            <img src="./src/zé gotinha.png" alt="Zé Gotinha" id="zegotinha" class="w-20 md:w-28" />
 
+            <h1 class="text-4xl md:text-5xl font-bold font text-[#004AAD]"
+                style="text-shadow: 2px 2px 2px rgba(0,0,0,0.3);">
+                Guia Rápido de Vacinação no Brasil
+            </h1>
         </header>
 
         <main>
@@ -127,7 +129,8 @@
                                     </div>
                                     <div>
                                         <h4 class="font-semibold">Influenza (Gripe)</h4>
-                                        <p class="text-sm text-gray-600">Dose anual para prevenir formas graves da doença.
+                                        <p class="text-sm text-gray-600">Dose anual para prevenir formas graves da
+                                            doença.
                                             <span class="info-item"><strong>Local de aplicação:</strong> Vasto
                                                 lateral direito.</span>
                                             <span class="info-item"><strong>Via de administração: </strong>
@@ -163,14 +166,13 @@
                                         </p>
                                     </div>
                                     <div>
-                                        <h5 class="font-semibold">Meningocócica C - Reforço</h5>
+                                        <h5 class="font-semibold">Meningocócica ACWY - Reforço</h5>
                                         <p class="text-sm text-gray-600">Dose de reforço (aos 12 meses).<span
                                                 class="info-item"><strong>Local de aplicação:</strong> Vasto lateral
                                                 esquerdo.</span>
                                             <span class="info-item"><strong>Via de administração: </strong>
                                                 Intramuscular</span>
-                                            <span class="info-item"><strong>Agulha:</strong> 25 x
-                                                6.</span>
+                                            <span class="info-item"><strong>Agulha:</strong> 20x5,5 ou 25x6.</span>
                                         </p>
                                     </div>
                                     <div>
@@ -180,8 +182,7 @@
                                                 direito.</span>
                                             <span class="info-item"><strong>Via de administração: </strong>
                                                 Intramuscular</span>
-                                            <span class="info-item"><strong>Agulha:</strong> 25 x
-                                                6.</span>
+                                            <span class="info-item"><strong>Agulha:</strong> 20x5,5 ou 25x6.</span>
                                         </p>
                                     </div>
                                 </div>
@@ -247,7 +248,7 @@
                                                 <h5 class="font-semibold">DTP</h5>
                                                 <p class="text-sm text-gray-600">2º Reforço.<span
                                                         class="info-item"><strong>Local de aplicação:</strong> Deltóide
-                                                        direito.</span>
+                                                        esquerdo.</span>
                                                     <span class="info-item"><strong>Via de administração: </strong>
                                                         Intramuscular</span>
                                                     <span class="info-item"><strong>Agulha:</strong>20x5,5 ou
@@ -289,8 +290,8 @@
                             <div class="grid grid-cols-1 sm:grid-cols-2 gap-8">
                                 <div>
                                     <h4 class="font-semibold">HPV</h4>
-                                    <p class="text-sm text-gray-600">Previne contra o Papilomavírus Humano.<span
-                                            class="info-item"><strong>Local de aplicação:</strong> Deltóide
+                                    <p class="text-sm text-gray-600">Previne contra o Papilomavírus Humano (de 9 a 14
+                                        anos).<span class="info-item"><strong>Local de aplicação:</strong> Deltóide
                                             direito.</span>
                                         <span class="info-item"><strong>Via de administração: </strong>
                                             Intramuscular</span>
@@ -299,8 +300,8 @@
                                 </div>
                                 <div>
                                     <h4 class="font-semibold">dT (Difteria e Tétano)</h4>
-                                    <p class="text-sm text-gray-600">Reforço recomendado nesta fase.<span
-                                            class="info-item"><strong>Local de aplicação:</strong> Deltóide
+                                    <p class="text-sm text-gray-600">Reforço recomendado nesta fase (Conforme histórico
+                                        vacinal).<span class="info-item"><strong>Local de aplicação:</strong> Deltóide
                                             esquerdo.</span>
                                         <span class="info-item"><strong>Via de administração: </strong>
                                             Intramuscular</span>
@@ -308,8 +309,19 @@
                                     </p>
                                 </div>
                                 <div>
-                                    <h4 class="font-semibold">Febre Amarela</h4>
-                                    <p class="text-sm text-gray-600">Verificar necessidade de dose única.<span
+                                    <h4 class="font-semibold">Hepatite B</h4>
+                                    <p class="text-sm text-gray-600">Esquema de 3 doses, caso não vacinado (Conforme
+                                        histórico vacinal).<span class="info-item"><strong>Local de aplicação:</strong>
+                                            Deltóide
+                                            direito.</span>
+                                        <span class="info-item"><strong>Via de administração: </strong>
+                                            Intramuscular</span>
+                                        <span class="info-item"><strong>Agulha:</strong> 25x6 ou 25x7.</span>
+                                    </p>
+                                </div>
+                                <div>
+                                    <h4 class="font-semibold">Tríplice Viral</h4>
+                                    <p class="text-sm text-gray-600">Recomendada conforme histórico.<span
                                             class="info-item"><strong>Local de aplicação:</strong> Deltóide
                                             direito.</span>
                                         <span class="info-item"><strong>Via de administração: </strong>
@@ -318,9 +330,20 @@
                                     </p>
                                 </div>
                                 <div>
+                                    <h4 class="font-semibold">Febre Amarela</h4>
+                                    <p class="text-sm text-gray-600">Verificar necessidade de dose única (Conforme
+                                        histórico vacinal).<span class="info-item"><strong>Local de aplicação:</strong>
+                                            Deltóide
+                                            direito.</span>
+                                        <span class="info-item"><strong>Via de administração: </strong>
+                                            Subcutânea</span>
+                                        <span class="info-item"><strong>Agulha:</strong> 13x4,5.</span>
+                                    </p>
+                                </div>
+                                <div>
                                     <h4 class="font-semibold">Meningocócica ACWY</h4>
-                                    <p class="text-sm text-gray-600">Dose de reforço contra Meningite.<span
-                                            class="info-item"><strong>Local de aplicação:</strong> Deltóide
+                                    <p class="text-sm text-gray-600">Dose de reforço contra Meningite (de 11 a 14
+                                        anos).<span class="info-item"><strong>Local de aplicação:</strong> Deltóide
                                             esquerdo.</span>
                                         <span class="info-item"><strong>Via de administração: </strong>
                                             Intramuscular</span>
@@ -329,8 +352,9 @@
                                 </div>
                                 <div>
                                     <h4 class="font-semibold">Dengue</h4>
-                                    <p class="text-sm text-gray-600">Ajuda a previnir contra formas graves da
-                                        doença.<span class="info-item"><strong>Local de aplicação:</strong> Deltóide
+                                    <p class="text-sm text-gray-600">Ajuda a previnir contra formas graves da doença (de
+                                        10 a 14 anos).
+                                        <span class="info-item"><strong>Local de aplicação:</strong> Deltóide
                                             direito.</span>
                                         <span class="info-item"><strong>Via de administração: </strong>
                                             Subcutânea</span>
@@ -461,6 +485,16 @@
                             </p>
                         </div>
                         <div>
+                            <h4 class="font-semibold">Hepatite B</h4>
+                            <p class="text-sm text-gray-600">Esquema de 3 doses, caso não vacinado (Conforme histórico
+                                vacinal).<span class="info-item"><strong>Local de aplicação:</strong> Deltóide
+                                    direito.</span>
+                                <span class="info-item"><strong>Via de administração: </strong>
+                                    Intramuscular</span>
+                                <span class="info-item"><strong>Agulha:</strong> 25x6 ou 25x7.</span>
+                            </p>
+                        </div>
+                        <div>
                             <h4 class="font-semibold">Covid-19</h4>
                             <p class="text-sm text-gray-600">Vacina contra Covid-19 passou a ser rotina para Idosos,
                                 Crianças e Gestantes.<span class="info-item"><strong>Local de aplicação:</strong>
@@ -478,11 +512,8 @@
         <!-- rodapé -->
         <footer class="text-center py-8 border-t border-gray-200">
             <p class="font-bold text-xl text-[#008000]">Vacinas salvam vidas!</p>
-            <p class="text-sm text-gray-500 mt-2">Fonte: Programa Nacional de Imunizações (PNI), Ministério da Saúde.
-            </p>
-            <!-- <div id="copyright" class="text-sm text-gray-500 mt-2" >
-                Desenvolvido por <a href="https://github.com/ovitorleal" target="_blank">Vitor Leal</a> © 2025
-            </div> -->
+
+
         </footer>
 
     </div>
