--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
         <header class="flex items-center justify-center gap-4 my-8 md:my-12">
-            <img src="./src/zé gotinha.png" alt="Zé Gotinha" id="zegotinha" class="w-20 md:w-28" />
+            <img src="./src/ze-gotinha.png" alt="ZéGotinha" id="zegotinha" class="w-20 md:w-28" />
 
             <h1 class="text-4xl md:text-5xl font-bold font text-[#004AAD]"
                 style="text-shadow: 2px 2px 2px rgba(0,0,0,0.3);">
